--- a/src/colors.scss
+++ b/src/colors.scss
@@ -8,8 +8,10 @@ $blue-hover: #0077b5;
 $bg-color-light: #ffffff;
 $text-color-light: #000000;
 $icon-color-light: #1da1f2;
+$link-color-light: #555;
 
 // Dark mode colors
 $bg-color-dark: #121212;
 $text-color-dark: #ffffff;
 $icon-color-dark: #4fc3f7;
+$link-color-dark: #555;
